# boatrace-ai-

./: .env.example  README.md  pyproject.toml
scripts/: init_db.py
src/collector/: downloader.py  extractor.py
src/database/: loader.py  models.py
tests/: test_database.py  test_downloader.py  test_extractor.py
